# mmstruct

./: .gitignore
mmstruct/: DESCRIPTION  NAMESPACE  config.status  configure  configure.ac
mmstruct/R/: AllGenerics.R  AllVirtuals.R  FinCenter-rulesFinCenter.R  RcppExports.R  likelihood.R  mmCONSTANTS.R  mmTRACE.R  model_EKOP.R  options-mmstructOptions.R  simulate.R  tparse-DaylightSavingTime.R  tparse.R  zzz.R
mmstruct/autom4te.cache/: output.0  traces.0
mmstruct/man/: getVolumeSummary.Rd  mmstruct-package.Rd
mmstruct/src/: MCfcds.h  Makevars  Makevars.in  RcppExports.cpp  RcppTparser.cc  algorithms.h  dtparser.h  simulateEKOP.cc  simulateEKOPMis.cc
mmstruct/src/include/scythestat/: algorithm.h  datablock.h  distributions.h  ide.h  la.h  matrix.h  matrix_bidirectional_iterator.h  matrix_forward_iterator.h  matrix_random_access_iterator.h  rng.h  smath.h  stat.h
mmstruct/src/include/scythestat/rng/: lecuyer.h  mersenne.h  rtmvnorm.h  wrapped_generator.h
